--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<a href="./2023/">2023</a>
-<a href="./2024/">2024</a>
+<ul>
+  <li><a href="./2023/">2023</a></li>
+  <li><a href="./2024/">2024</a></li>
+</ul>
