--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <ul>
   <li><a href="./2023/">2023</a></li>
   <li><a href="./2024/">2024</a></li>
-  <li><a href="./2025/">2025</a></li>
+  <li><a href="/slides2025/">2025</a></li>
   <li><a href="/slides2026/">2026</a></li>
 </ul>
